# facturitrendy

./: app.py  encryption.key  migrate_db.py  migrate_gestiune.py  pyproject.toml  replit.md  smartbill_service.py  trendyol_service.py  user_manager.py  users.db
templates/: admin_add_user.html  admin_edit_user.html  admin_users.html  hotoDBCZR.txt  index.html  login.html
