[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "cryptography>=46.0.2",
    "beautifulsoup4>=4.14.2",
    "werkzeug>=3.1.3",
]
